--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chad-shared-ui2",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "private": false,
   "repository": {
     "type": "git",
@@ -27,10 +27,10 @@
     ]
   },
   "peerDependencies": {
-    "antd": "^4.17.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "antd": ">=4.0.0",
+    "react": ">=16.7.0",
+    "react-dom": ">=16.7.0",
+    "styled-components": ">=5.0.0"
   },
   "dependencies": {
     "antd": "^4.17.4",
