--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chad-shared-ui2",
-  "version": "0.1.13",
+  "name": "kangqod-shared-ui",
+  "version": "0.1.1",
   "private": false,
   "repository": {
     "type": "git",
@@ -9,8 +9,8 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/chad-shared-ui2.cjs.js",
-  "module": "./dist/chad-shared-ui2.es.js",
+  "main": "./dist/kangqod-shared-ui.cjs.js",
+  "module": "./dist/kangqod-shared-ui.es.js",
   "scripts": {
     "dev": "rm -rf dist && vite serve example",
     "build": "rm -rf dist && vite build && tsc --project tsconfig.build.json --declaration --outDir dist --emitDeclarationOnly",
